@@ -57,6 +57,10 @@ def tr(id):
     return addon.getLocalizedString(id)
 
 
+def bool_setting(name):
+    return  get_setting(name) == 'true'
+
+
 def make_notice(object):
     xbmc.log(str(object), xbmc.LOGDEBUG )
 
@@ -90,6 +94,11 @@ class DrDkTvAddon(object):
         self.menuItems = list()
         runScript = "RunAddon(plugin.video.drnu,?show=areaselector&random={:d})".format(self._plugin_handle)
         self.menuItems.append((tr(30511), runScript))
+
+        # Area Selector
+        self.area_item = xbmcgui.ListItem(tr(30101), offscreen=True)
+        self.area_item.setArt({'fanart': self.fanart_image, 'icon': os.path.join(addon_path, 'resources', 'icons', 'all.png')})
+
         self._load()
 
     def _save(self):
@@ -127,7 +136,7 @@ class DrDkTvAddon(object):
             self.showMainMenu()
         else:
             items = self.api.getChildrenFrontItems('dr-' + areaSelected)
-            self.listSeries(items)
+            self.listSeries(items, add_area_selector=bool_setting('enable.areaitem'))
 
     def showMainMenu(self):
         items = list()
@@ -188,8 +197,11 @@ class DrDkTvAddon(object):
         # Favorite Program Series
         item = xbmcgui.ListItem(tr(30008), offscreen=True)
         item.setArt({'fanart': self.fanart_image, 'icon': os.path.join(addon_path, 'resources', 'icons', 'plusone.png')})
-        items.append((self._plugin_url + '?show=favorites', item, True))
         item.addContextMenuItems(self.menuItems, False)
+        items.append((self._plugin_url + '?show=favorites', item, True))
+
+        if bool_setting('enable.areaitem'):
+            items.append((self._plugin_url + '?show=areaselector', self.area_item, True))
 
         xbmcplugin.addDirectoryItems(self._plugin_handle, items)
         xbmcplugin.endOfDirectory(self._plugin_handle)
@@ -293,7 +305,7 @@ class DrDkTvAddon(object):
             keyword = keyboard.getText()
             self.listSeries(self.api.getSeries(keyword))
 
-    def listSeries(self, items, addToFavorites=True):
+    def listSeries(self, items, addToFavorites=True, add_area_selector=False):
         if not items:
             xbmcplugin.endOfDirectory(self._plugin_handle, succeeded=False)
             if not addToFavorites:
@@ -302,6 +314,8 @@ class DrDkTvAddon(object):
                 xbmcgui.Dialog().ok(addon_name, tr(30013))
         else:
             directoryItems = list()
+            if add_area_selector:
+                directoryItems.append((self._plugin_url + '?show=areaselector', self.area_item, True))
             for item in items:
                 menuItems = list(self.menuItems)
 
@@ -378,9 +392,9 @@ class DrDkTvAddon(object):
         item = xbmcgui.ListItem(path=video['Uri'], offscreen=True)
         item.setArt({'thumb': api_item['PrimaryImageUri']})
 
-        if not all([get_setting('disable.kids.subtitles') == 'true' and kids_channel]):
+        if not all([bool_setting('disable.kids.subtitles') and kids_channel]):
             if video['SubtitlesUri']:
-                if get_setting('enable.subtitles') == 'true':
+                if bool_setting('enable.subtitles'):
                     item.setSubtitles(video['SubtitlesUri'][::-1])
                 else:
                     item.setSubtitles(video['SubtitlesUri'])
@@ -429,7 +443,7 @@ class DrDkTvAddon(object):
 
     def addFavorite(self, key):
         self._load()
-        if not key in self.favorites:
+        if key not in self.favorites:
             self.favorites.append(key)
         self._save()
         xbmcgui.Dialog().ok(addon_name, tr([30008, 30009]))
@@ -515,10 +529,10 @@ class DrDkTvAddon(object):
                     self.showMainMenu()
                 elif area == 2:
                     items = self.api.getChildrenFrontItems('dr-ramasjang')
-                    self.listSeries(items)
+                    self.listSeries(items, add_area_selector=True)
                 elif area == 3:
                     items = self.api.getChildrenFrontItems('dr-ultra')
-                    self.listSeries(items)
+                    self.listSeries(items, add_area_selector=True)
 
         except tvapi.ApiException as ex:
             self.displayError(str(ex))
